--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   carousel_slider: ^4.2.1
   shadow_overlay: ^1.0.5
   shimmer: ^3.0.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
