--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   shadow_overlay: ^1.0.5
   shimmer: ^3.0.0
   url_launcher: ^6.2.6
+  shared_preferences: ^2.2.3
+  cached_network_image: ^3.3.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
