Fix: Application name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shared_preferences: ^2.2.3
   cached_network_image: ^3.3.1
   google_fonts: ^6.2.1
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
