--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cached_network_image: ^3.3.1
   google_fonts: ^6.2.1
   iconsax: ^0.0.8
+  rename_app: ^1.3.2
 
 dev_dependencies:
   flutter_test:
