--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -1,22 +1,21 @@
 name: Flutter CI
 
 # This workflow is triggered on pushes to the repository.
-
 on:
   push:
     branches:
     - master
-    
-# on: push    # Default will running for every branch.
-    
+
 jobs:
   build:
     # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
     
-    # Setup Java environment in order to build the Android app.
+    # Checkout the repository.
     - uses: actions/checkout@v1
+    
+    # Setup Java environment in order to build the Android app.
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
@@ -29,12 +28,38 @@ jobs:
     
     # Get flutter dependencies.
     - run: flutter pub get
-
+    
+    # Check for any formatting issues in the code.
+    - run: flutter format --set-exit-if-changed .
+    
+    # Statically analyze the Dart code for any errors.
+    - run: flutter analyze .
+    
+    # Run widget tests for our flutter project.
+    - run: flutter test
+    
     # Build apk.
     - run: flutter build apk
     
-    # Upload generated apk to the artifacts.
-    - uses: actions/upload-artifact@v1
+    # Create a new release
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: release-apk
-        path: build/app/outputs/apk/release/app-release.apk
+        tag_name: 'v1.0.0'  # You can use a dynamic version if needed
+        release_name: 'Release v1.0.0'
+        draft: false
+        prerelease: false
+    
+    # Upload generated apk to the release assets
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/app/outputs/apk/release/app-release.apk
+        asset_name: app-release.apk
+        asset_content_type: application/vnd.android.package-archive
